# ikanban

./: .gitignore  AGENTS.md  ARCH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  TODO.md  eslint.config.js  package.json  skills-lock.json  tailwind.config.js  tsconfig.json
.agents/skills/: ikanban
.github/workflows/: publish-npm.yml  publish.yml
.opencode/commands/: changelog.md
crates/ikanban-core/: Cargo.toml
crates/ikanban-core/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
crates/ikanban-tui/: Cargo.toml
crates/ikanban-tui/src/: action.rs  api.rs  app.rs  config.rs  lib.rs  main.rs  models.rs  ui.rs  ws.rs
docs/: 0.1.6TO0.2.7.md  0.2.7TO0.3.1.md
migrations/: 20260121000000_initial_schema.sql
prompts/: release.md
scripts/: bump-version.mjs  install.sh
skills/ikanban/: SKILL.md
src/: app.rs  app.tsx  index.tsx  keyboard.rs  lib.rs  main.rs
src/agent/: instance.ts  registry.ts
src/app/: App.tsx  routes.ts
src/components/: LogPanel.tsx  board.rs  home.rs  mod.rs  not_found.rs  project_view.rs  session_view.rs  task_view.rs
src/db/: mod.rs  models.rs
src/domain/: conversation.ts  project.ts  task.ts
src/executor/: mod.rs
src/hooks/: useAgent.ts  useKeyboard.ts  useSession.ts
src/runtime/: conversation-manager.test.ts  conversation-manager.ts  event-bus.test.ts  event-bus.ts  opencode-runtime.test.ts  opencode-runtime.ts  project-registry.test.ts  project-registry.ts  runtime-logger.ts  task-orchestrator.test.ts  task-orchestrator.ts  task-registry.ts  worktree-manager.integration.test.ts  worktree-manager.test.ts  worktree-manager.ts
src/server/: agent.rs  db.rs  mod.rs  models.rs  session.rs
src/session/: manager.rs
src/state/: storage.ts  store.ts
src/ui/: board.rs  card.rs  column.rs  mod.rs  project_panel.rs  session_panel.rs  task_execution_panel.rs
src/views/: ProjectView.tsx  SessionView.tsx
src/worktree/: manager.rs  mod.rs
style/: main.css
(+21 files in other folders)
