[package]
name = "ikanban"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# SSR-only dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1.43", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "compression-gzip",
], optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
agent-client-protocol = { version = "0.9", optional = true }
dirs = { version = "5.0", optional = true }
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
eventsource-stream = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

# UI dependencies
egui = { version = "0.29", optional = true }

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:agent-client-protocol",
    "dep:dirs",
    "dep:async-trait",
    "dep:reqwest",
    "dep:eventsource-stream",
    "dep:futures",
]
ui = [
    "dep:egui",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
tempfile = "3.8"
